--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,11 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src", 
+    "src/**/*.ts", 
+    "src/**/*.tsx", 
+    "src/types/svg.d.ts",
+    "src/types/json.d.ts",
+    "src/types/image.d.ts"
   ]
 }
