feat : keyboard 미완, chore : 상태관리 zustand set

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "src/**/*.tsx", 
     "src/types/svg.d.ts",
     "src/types/json.d.ts",
-    "src/types/image.d.ts"
+    "src/types/image.d.ts",
+    "src/types/custom.d.ts"
   ]
 }
