--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.13"
   }
 }
